# Groww-weekly-review-MCP-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.render  README.md  docker-compose.yml  products.yaml  pyproject.toml  render.yaml  start.sh
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py  api.py  config.py  logging.py  pulse_types.py  storage.py  telemetry.py  time_utils.py
agent/clustering/: __init__.py  filters.py  keyphrases.py  models.py  pipeline.py  providers.py
agent/ingestion/: __init__.py  appstore.py  csv_upload.py  models.py  pii.py  pipeline.py  playstore.py
agent/mcp_client/: __init__.py  docs_client.py  gmail_client.py  session.py
agent/orchestration/: __init__.py  locks.py  models.py  pipeline.py
agent/publish/: __init__.py  docs_pipeline.py  gmail_pipeline.py  models.py
agent/rendering/: __init__.py  models.py  pipeline.py
agent/summarization/: __init__.py  llm_client.py  models.py  pipeline.py  verbatim.py
docs/: architecture.md  completion-audit.md  deployment.md  implementation-plan.md  problemStatement.md  quickstart.md
docs/phases/phase-0-foundations/: edge-cases.md  evaluations.md
docs/phases/phase-1-ingestion/: edge-cases.md  evaluations.md
docs/phases/phase-2-clustering/: edge-cases.md  evaluations.md
docs/phases/phase-3-summarization/: edge-cases.md  evaluations.md
docs/phases/phase-4-render/: edge-cases.md  evaluations.md
infra/alerts/: pulse-rules.yml
infra/grafana/: pulse-overview.json
tests/: test_api.py  test_cli.py  test_clustering.py  test_config.py  test_csv_upload.py  test_ingestion.py  test_live_ingestion.py  test_mcp_session.py  test_orchestration.py  test_publish_docs.py  test_publish_gmail.py  test_rendering.py  test_storage.py  test_summarization.py  test_telemetry.py  test_time_utils.py
tests/fixtures/: appstore_page1.xml  appstore_page2.xml  playstore_page1.json  playstore_page2.json
(+12 files in other folders)
